--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,7 @@ detekt = "1.23.6"
 emoji2-emojipicker = "1.5.0"
 espresso-core = "3.6.1"
 flippable = "1.5.4"
-guava = "33.0.0-android"
+guava = "33.0.0-android" # do not upgrade (added with zap settings, should be removed)
 hilt = "1.2.0"
 jetbrains-markdown = "0.7.3"
 junit = "4.13.2"
@@ -36,7 +36,7 @@ ksp = "2.0.21-1.0.25"
 ktlint_compose_rules = "0.3.17"
 lifecycle = "2.8.7"
 material-icons = "1.7.5"
-media3-exoplayer = "1.4.1"
+media3-exoplayer = "1.5.0"
 mockk = "1.13.12"
 okhttp = "4.12.0"
 paging = "3.3.4"
