--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,7 @@ activity-ktx = "1.9.3"
 agp = "8.7.3"
 appcompat = "1.7.0"
 bitcoinj-core = "0.16.3"
+biometric = "1.4.0-alpha02"
 camera = "1.4.1"
 compose-bom = "2024.12.01"
 compose-lottie = "6.4.0"
@@ -165,9 +166,12 @@ spongycastle-core = { module = "com.madgag.spongycastle:core", version.ref = "sp
 bitcoinj-core = { module = "org.bitcoinj:bitcoinj-core", version.ref = "bitcoinj-core" }
 lightning-kmp = { module = "fr.acinq.lightning:lightning-kmp", version = "1.6.1" }
 
+
+#Security
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "security-crypto" }
 androidx-security-app-authenticator = { module = "androidx.security:security-app-authenticator", version.ref = "security-app-authenticator" }
 androidx-security-identity-credential = { module = "androidx.security:security-identity-credential", version.ref = "security-identity-credential" }
+androidx-biometric = { module = "androidx.biometric:biometric", version.ref="biometric" }
 
 # Tests libs
 junit = { group = "junit", name = "junit", version.ref = "junit" }
