Implement primal wallet NWC deep linking; Reorganize packages for primal wallet NWC;

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,10 +41,12 @@
             android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
             <intent-filter
                 android:autoVerify="true"
                 android:label="Primal Note">
@@ -58,6 +60,7 @@
                     android:pathPrefix="/e/"
                     android:scheme="https" />
             </intent-filter>
+
             <intent-filter
                 android:autoVerify="true"
                 android:label="Dev Primal Note">
@@ -71,6 +74,7 @@
                     android:pathPrefix="/e/"
                     android:scheme="https" />
             </intent-filter>
+
             <intent-filter android:label="Wallet Connect">
                 <action android:name="android.intent.action.VIEW" />
 
@@ -79,6 +83,17 @@
 
                 <data android:scheme="nostr+walletconnect" />
                 <data android:scheme="nostrwalletconnect" />
+            </intent-filter>
+
+            <intent-filter android:label="Primal Wallet Connect">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="nostrnwc"/>
+                <data android:scheme="nostrnwc+primal" />
+                <data android:host="connect"/>
             </intent-filter>
         </activity>
 
