Create shared kmp library module
Implements `shared` kmp module and adds it as dependency to
`app` module. Shared module has built-in room database with
proof of concept table and dao.

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,13 @@
 /caches/
 /daemon/
 /kotlin-profile/
+/.kotlin/
 /native/
 /wrapper/
 *.iml
 .gradle
 /local.properties
+/.idea/artifacts/
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
